# Python-ArvoreBinaria

./: LICENSE.txt  README.md  README.rst  pyproject.toml  setup.cfg
pysimpletree/: binarytree.py
tests/: test_pysimpletree.py
