[tool.poetry]
name = "pysimpletree"
version = "1.0.6"
description = "https://github.com/joaocarlos-losfe/pysimpletree"
authors = ["João Carlos && Vitor Santos"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
