[metadata]
name = pysimpletree
version = 6.5.0
author = João Carlos && Vitor Santos
description = Pacote python para criação de árvores binárias de busca
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/joaocarlos-losfe/pysimpletree
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
  = pysimpletree
package_requires = >=3.9

[options.packages.fing]
where = pysimpletree
